k8s/ingress/ingress.yaml
# sonsaekim Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonsaekim-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: auth-service
      port:
        number: 3001
  rules:
  - http:
      paths:
      - path: /learn/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /quiz/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /game/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /imitate/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /js/quiz/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /js/game/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /js/imitate/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /js/auth/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /css/quiz/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /css/game/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /css/imitate/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /css/learn/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /css/layouts/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /css/auth/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /css/mypage/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /assets/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /uploads/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 3000
      - path: /auth/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /home
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /loginHome
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /logout
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /mypage/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /progress/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: progress-service
            port:
              number: 3002
